--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <p> </p>
         <h2>Github Commit timeline</h2>
         <p1>October 27th 2025 [Website Created]</p1>
+        <a href="https://www.google.com/">Go check out google!</a>
     </body>
 </html>
