Second Page Link Test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <p>More will come at a later date but as of now this is it</p>
         <p> </p>
         <h2>Github Commit timeline</h2>
-        <p1>October 27th 2025 [Website Created]</p1>
+        <p>October 27th 2025 [Website Created]</p>
+        <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
         <a href="https://www.google.com/">Go check out google!</a>
+        <a href="secondpage.html">Second Page Test Link</a>
+
     </body>
 </html>
