--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Messing About</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <h1>Welcome to me messint aboug</h1>
@@ -11,6 +12,7 @@
         <h2>Github Commit timeline</h2>
         <p>October 27th 2025 [Website Created]</p>
         <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
+        <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
         <a href="https://www.google.com/">Go check out google!</a>
         <a href="secondpage.html">Second Page Test Link</a>
 
