--- a/secondpage.html
+++ b/secondpage.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>MA Page 2</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <h1>HI!</h1>
         <p>You've made it to the second page</p>
         <p>Look @ how these pages are linked to link more!</p>
+        <p>This is a line fixing an error</p>
     </body>
 </html>
