--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
         <h1>Welcome to me messint aboug</h1>
         <p>This is a website for me to simply mess about.</p>
         <p>More will come at a later date but as of now this is it</p>
+        <p>Currently Under Development: Navigation Bar</p>
         <p> </p>
         <h2>Github Commit timeline</h2>
         <p>October 27th 2025 [Website Created]</p>
         <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
         <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
+        <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
         <a href="https://www.google.com/">Go check out google!</a>
         <a href="secondpage.html">Second Page Test Link</a>
+        <a href="thirdpage.html">Third Page Test Link</a>
 
     </body>
 </html>
