--- a/secondpage.html
+++ b/secondpage.html
@@ -9,5 +9,8 @@
         <p>You've made it to the second page</p>
         <p>Look @ how these pages are linked to link more!</p>
         <p>This is a line fixing an error</p>
+        <a href="index.html">Homepage</a>
+        <a href="thirdpage.html">Third Page</a>
+
     </body>
 </html>
