--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
+        <!-- Navigation Bar -->
+        <div class="topnav">
+            <a class="active" href="secondpage.html">Page Two</a>
+            <a href="thirdpage.html">Page Three</a>
+        </div>
+
         <h1>Welcome to me messint aboug</h1>
         <p>This is a website for me to simply mess about.</p>
         <p>More will come at a later date but as of now this is it</p>
@@ -15,9 +21,6 @@
         <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
         <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
         <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
-        <a href="https://www.google.com/">Go check out google!</a>
-        <a href="secondpage.html">Second Page Test Link</a>
-        <a href="thirdpage.html">Third Page Test Link</a>
-
+        <p>October 27th 2025 @ 11:28:11 [Nav Bar Implementation</p>
     </body>
 </html>
