--- a/secondpage.html
+++ b/secondpage.html
@@ -5,12 +5,14 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
+        <!-- Navigation Bar -->
+        <div class="topnav">
+            <a class="active" href="index.html">Homepage</a>
+            <a href="thirdpage.html">Page Three</a>
+        </div>
+
         <h1>HI!</h1>
         <p>You've made it to the second page</p>
         <p>Look @ how these pages are linked to link more!</p>
-        <p>This is a line fixing an error</p>
-        <a href="index.html">Homepage</a>
-        <a href="thirdpage.html">Third Page</a>
-
     </body>
 </html>
