--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="thirdpage.html">Page Three</a>
         </div>
 
-        <h1>Welcome to me messint aboug</h1>
+        <h1>Welcome to me messing about</h1>
         <p>This is a website for me to simply mess about.</p>
         <p>More will come at a later date but as of now this is it</p>
         <p>Currently Under Development: Navigation Bar</p>
@@ -22,5 +22,6 @@
         <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
         <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
         <p>October 27th 2025 @ 11:28:11 [Nav Bar Implementation</p>
+        <p style="color: #bf9b30;">October 27th 2025 @ 11:45:56 [Nav Bar Optimization & Site Theme Changes</p>
     </body>
 </html>
