--- a/secondpage.html
+++ b/secondpage.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>MA Page 2</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -11,8 +14,10 @@
             <a href="thirdpage.html">Page Three</a>
         </div>
 
-        <h1>HI!</h1>
-        <p>You've made it to the second page</p>
-        <p>Look @ how these pages are linked to link more!</p>
+        <div class="welcome">
+            <h1>HI! You've made it to page 2!</h1>
+            <p>You've made it to the second page</p>
+            <p>Look @ how these pages are linked to link more!</p>
+        </div>
     </body>
 </html>
