--- a/thirdpage.html
+++ b/thirdpage.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>MA Page 3</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -10,10 +13,12 @@
             <a class="active" href="index.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
         </div>
-        <!-- Basic HTML -->
-        <h1>Welcome To Page 3!</h1>
-        <p>You've made it to the third page</p>
-        <p>We're still working on many great things for the site</p>
-        <p>Currently under development is a navigation bar!</p>
+        <!-- Welcome Text -->
+        <div class="welcome">
+            <h1>Welcome To Page 3!</h1>
+            <p>You've made it to the third page</p>
+            <p>We're still working on many great things for the site</p>
+            <p>Currently under development is website formatting</p>
+        </div>
     </body>
 </html>
