--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Messing About</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -11,17 +14,20 @@
             <a href="thirdpage.html">Page Three</a>
         </div>
 
-        <h1>Welcome to me messing about</h1>
-        <p>This is a website for me to simply mess about.</p>
-        <p>More will come at a later date but as of now this is it</p>
-        <p>Currently Under Development: Navigation Bar</p>
-        <p> </p>
-        <h2>Github Commit timeline</h2>
-        <p>October 27th 2025 [Website Created]</p>
-        <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
-        <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
-        <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
-        <p>October 27th 2025 @ 11:28:11 [Nav Bar Implementation</p>
-        <p style="color: #bf9b30;">October 27th 2025 @ 11:45:56 [Nav Bar Optimization & Site Theme Changes</p>
+        <div class="welcome">
+            <h1>Welcome to me messing about</h1>
+            <p>This is a website for me to simply mess about.</p>
+            <p>More will come at a later date but as of now this is it</p>
+            <p>Currently Under Development: Better formatting</p>
+        <p> </p> <!-- this is here for spacing purposes currently, do not remove--> 
+            <h2>Github Commit timeline</h2>
+            <p>October 27th 2025 [Website Created]</p>
+            <p>October 27th 2025 @ 10:49:47 [Second Page Added]</p>
+            <p>October 27th 2025 @ 10:59:12 [CSS Page Added]</p>
+            <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
+            <p>October 27th 2025 @ 11:28:11 [Nav Bar Implementation]</p>
+            <p>October 27th 2025 @ 11:45:56 [Nav Bar Optimization & Site Theme Changes</p>
+            <p style="color: #bf9b30;">October 29th 2025 @ 09:51:39 [New Font Implimentation]</p>
+        </div>
     </body>
 </html>
