--- a/secondpage.html
+++ b/secondpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MA Page 2</title>
+        <title>Messing About Page 2</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
@@ -10,14 +10,16 @@
     <body>
         <!-- Navigation Bar -->
         <div class="topnav">
-            <a class="active" href="index.html">Homepage</a>
+            <a href="index.html">Homepage</a>
             <a href="thirdpage.html">Page Three</a>
+            <a href="fourthpage.html">Page Four</a>
         </div>
 
         <div class="welcome">
             <h1>HI! You've made it to page 2!</h1>
-            <p>You've made it to the second page</p>
-            <p>Look @ how these pages are linked to link more!</p>
+            <p>You've made it to the second page.</p>
+            <p>This page was a proof of concept for linking.</p>
+            <p>It is currently a placeholder page.</p>
         </div>
     </body>
 </html>
