--- a/fourthpage.html
+++ b/fourthpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Messing About Page 3</title>
+        <title>Messing About</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
@@ -9,17 +9,18 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <div class="topnav">
+       <div class="topnav">
             <a href="index.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
-            <a href="fourthpage.html">Page Four</a>
+            <a href="thirdpage.html">Page Three</a>
         </div>
-        <!-- Welcome Text -->
+
         <div class="welcome">
-            <h1>Welcome To Page 3!</h1>
-            <p>This is the newsletter page.</p>
-            <p>You can check back here to see what's being worked on for the site!</p>
-            <p>We're working on getting some pictures uploaded to the site right now!</p>
+            <h1>Welcome to page four!</h1>
+            <p>Here we're gonna try and show off some photos!</p>
+            <p>The golden gate bridge picture is not mine and can</p>
+            <a href="https://www.pexels.com/photo/golden-state-bridge-california-161764/" target="_blank">be found @ this link</a>
         </div>
+        <img src="pexels-pixabay-161764.jpg" alt="Golden Gate Bridge">
     </body>
 </html>
