--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <div class="topnav">
-            <a class="active" href="secondpage.html">Page Two</a>
+       <div class="topnav">
+            <a href="secondpage.html">Page Two</a>
             <a href="thirdpage.html">Page Three</a>
+            <a href="fourthpage.html">Page Four</a>
         </div>
 
         <div class="welcome">
             <h1>Welcome to me messing about</h1>
             <p>This is a website for me to simply mess about.</p>
-            <p>More will come at a later date but as of now this is it</p>
-            <p>Currently Under Development: Better formatting</p>
+            <p>More will come at a later date but as of now this is it.</p>
+            <p>Currently Under Development: Pictures for page four.</p>
         <p> </p> <!-- this is here for spacing purposes currently, do not remove--> 
             <h2>Github Commit timeline</h2>
             <p>October 27th 2025 [Website Created]</p>
@@ -27,7 +28,10 @@
             <p>October 27th 2025 @ 11:12:04 [Nav Bar Testing Begun]</p>
             <p>October 27th 2025 @ 11:28:11 [Nav Bar Implementation]</p>
             <p>October 27th 2025 @ 11:45:56 [Nav Bar Optimization & Site Theme Changes</p>
-            <p style="color: #bf9b30;">October 29th 2025 @ 09:51:39 [New Font Implimentation]</p>
+            <p>October 29th 2025 @ 09:51:39 [New Font Implimentation]</p>
+            <p>October 29th 2025 @ 10:25:36 [Fourth Page Implementation]</p>
+            <p style="color: #bf9b30;">October 29th 2025 @ 10:47:45 [Picture Implementation]</p>
+
         </div>
     </body>
 </html>
