--- a/fourthpage.html
+++ b/fourthpage.html
@@ -20,7 +20,12 @@
             <p>Here we're gonna try and show off some photos!</p>
             <p>The golden gate bridge picture is not mine and can</p>
             <a href="https://www.pexels.com/photo/golden-state-bridge-california-161764/" target="_blank">be found @ this link</a>
+            <p> </p>
+            <a href="https://www.pexels.com/photo/white-water-boat-753331/" target="_blank">as can the ship picture</a>
         </div>
-        <img src="pexels-pixabay-161764.jpg" alt="Golden Gate Bridge">
+        <div class="images">
+            <img src="Images/pexels-pixabay-161764.jpg" alt="Golden Gate Bridge">
+            <img src="Images/pexels-julius-silver-240301-753331.jpg" alt="German Cargo Ship">
+        </div>
     </body>
 </html>
