--- a/thirdpage.html
+++ b/thirdpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Messing About Page 3</title>
+        <title>Messing About Newsletter</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <h1>Welcome To Page 3!</h1>
             <p>This is the newsletter page.</p>
             <p>You can check back here to see what's being worked on for the site!</p>
-            <p>We're working on getting some pictures uploaded to the site right now!</p>
+            <p>Pictures are live, new ones will be coming soon!</p>
         </div>
     </body>
 </html>
