--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <p>October 27th 2025 @ 11:45:56 [Nav Bar Optimization & Site Theme Changes</p>
             <p>October 29th 2025 @ 09:51:39 [New Font Implimentation]</p>
             <p>October 29th 2025 @ 10:25:36 [Fourth Page Implementation]</p>
-            <p style="color: #bf9b30;">October 29th 2025 @ 10:47:45 [Picture Implementation]</p>
+            <p>October 29th 2025 @ 10:47:45 [Picture Implementation]</p>
+            <p style="color: #bf9b30;">October 29th 2025 @ 11:05:09 [Picture Refinement]</p>
+
 
         </div>
     </body>
