--- a/thirdpage.html
+++ b/thirdpage.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Navigation Bar -->
         <div class="topnav">
-            <a href="index.html">Homepage</a>
+            <a href="firstpage.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
             <a href="fourthpage.html">Page Four</a>
         </div>
@@ -20,6 +20,8 @@
             <p>This is the newsletter page.</p>
             <p>You can check back here to see what's being worked on for the site!</p>
             <p>Pictures are live, new ones will be coming soon!</p>
+            <p>We are beginning construction on different website themes!</p>
+            <p>High contrast is under development!</p>
         </div>
     </body>
 </html>
