--- a/fourthpage.html
+++ b/fourthpage.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Navigation Bar -->
        <div class="topnav">
-            <a href="index.html">Homepage</a>
+            <a href="firstpage.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
             <a href="thirdpage.html">Page Three</a>
         </div>
