--- a/secondpage.html
+++ b/secondpage.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Navigation Bar -->
         <div class="topnav">
-            <a href="index.html">Homepage</a>
+            <a href="firstpage.html">Homepage</a>
             <a href="thirdpage.html">Page Three</a>
             <a href="fourthpage.html">Page Four</a>
         </div>
