--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <a href="firstpage.html">Enter</a>
         <p>Regular or High Contrast Theme?</p>
+
+        <button onclick="window.location.href='firstpage.html?theme=regular'">Regular</button>
+        <button onclick="window.location.href='firstpage.html?theme=contrast'">High Contrast</button>
+        <br><br>
+        <a href="firstpage.html">Enter</a>
     </body>
 </html>
