Flexbox Mobile Button Formatting

--- a/firstpage.html
+++ b/firstpage.html
@@ -61,7 +61,9 @@
                 <li>October 29th 2025 @ 10:25:36 [Fourth Page Implementation]</li>
                 <li>October 29th 2025 @ 10:47:45 [Picture Implementation]</li>
                 <li>October 29th 2025 @ 11:05:09 [Picture Refinement]</li>
-                <li style="color: #bf9b30;">October 29th 2025 @ 01:21:25 [Theme Implementation & Formatting</li>
+                <li>October 29th 2025 @ 01:21:25 [Theme Implementation & Formatting]</li>
+                <li style="color: #bf9b30;">October 29th 2025 @ 02:10:12 [Flexbox Mobile Button Formatting]</li>
+
             </ul>
         </div>
     </body>
