--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <p>Regular or High Contrast Theme?</p>
 
-        <button onclick="window.location.href='firstpage.html?theme=regular'">Regular</button>
-        <button onclick="window.location.href='firstpage.html?theme=contrast'">High Contrast</button>
-        <br><br>
-        <a href="firstpage.html">Enter</a>
+        <div class="button-container">
+            <button onclick="window.location.href='firstpage.html?theme=regular'">Regular</button>
+            <button onclick="window.location.href='firstpage.html?theme=contrast'">High Contrast</button>
+        </div>
     </body>
 </html>
