--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <p>Regular or High Contrast Theme?</p>
+        <h1>Please Select Your Experience</h1>
 
         <div class="button-container">
             <button onclick="window.location.href='firstpage.html?theme=regular'">Regular</button>
             <button onclick="window.location.href='firstpage.html?theme=contrast'">High Contrast</button>
+            <button onclick="window.location.href='firstpage.html?theme=winter'">Winter</button>
+
+
         </div>
     </body>
 </html>
