--- a/secondpage.html
+++ b/secondpage.html
@@ -10,16 +10,21 @@
         <script>
             window.addEventListener("DOMContentLoaded", () => {
                 const params = new URLSearchParams(window.location.search);
-                const theme = params.get("theme");
+                const theme = params.get("theme") || "regular"; // default to regular
                 const themeLink = document.getElementById("theme-style");
 
-                if (theme === "contrast") {
-                    themeLink.href = "highcontrast.css";
-                } else {
-                    themeLink.href = "styles.css";
-                }
+                // Map theme names to their CSS files
+                const themeFiles = {
+                    regular: "styles.css",
+                    contrast: "highcontrast.css",
+                    winter: "winter.css"
+                    // add more themes here if needed
+                };
 
-                // Keep theme in all links
+                // Apply the selected theme file if it exists, otherwise fallback
+                themeLink.href = themeFiles[theme] || themeFiles.regular;
+
+                // Keep theme across internal links
                 const allLinks = document.querySelectorAll("a[href]");
                 allLinks.forEach(link => {
                     const url = new URL(link.href, window.location.origin);
