--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Messing About Welcome</title>
+        <title>Select Your Theme</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
         <h1>Please Select Your Experience</h1>
 
         <div class="button-container">
-            <button onclick="window.location.href='firstpage.html?theme=regular'">Regular</button>
+            <button onclick="window.location.href='firstpage.html?theme=regular'">Original</button>
             <button onclick="window.location.href='firstpage.html?theme=contrast'">High Contrast</button>
             <button onclick="window.location.href='firstpage.html?theme=winter'">Winter</button>
 
