--- a/firstpage.html
+++ b/firstpage.html
@@ -66,7 +66,9 @@
                 <li>October 29th 2025 @ 11:05:09a [Picture Refinement]</li>
                 <li>October 29th 2025 @ 01:21:25p [Theme Implementation & Formatting]</li>
                 <li>October 29th 2025 @ 02:10:12p [Flexbox Mobile Button Formatting]</li>
-                <li style="color: #bf9b30;">October 29th 2025 @ 11:45:10p [Additional Theme Implementation]</li>
+                <li>October 29th 2025 @ 11:45:10p [Additional Theme Implementation]</li>
+                <li style="color: #bf9b30;">October 30th 2025 @ 12:09:00a [Formatting]</li>
+
 
 
             </ul>
