--- a/fourthpage.html
+++ b/fourthpage.html
@@ -44,14 +44,16 @@
 
         <div class="welcome">
             <h1>Welcome to page four!</h1>
-            <p>Here we're gonna try and show off some photos!</p>
-            <p>The golden gate bridge picture is not mine and can</p>
-            <a href="https://www.pexels.com/photo/golden-state-bridge-california-161764/" target="_blank">be found @ this link,</a>
-            <a href="https://www.pexels.com/photo/white-water-boat-753331/" target="_blank">as can the ship picture</a>
+            <p>Here are some pictures from a recent vacation!<br>
+               All rights reserved, do not use these images!
+            </p>
         </div>
         <div class="images">
-            <img src="Images/pexels-pixabay-161764.jpg" alt="Golden Gate Bridge">
-            <img src="Images/pexels-julius-silver-240301-753331.jpg" alt="German Cargo Ship">
+            <img src="Images/IMG_8485.jpeg" alt ="forest full of hybernating trees">
+            <img src="Images/IMG_8570.jpeg" alt ="mountains at sunset with blue sky">
+            <img src="Images/IMG_8541.jpeg" alt ="waterfall in the woods">
+            <img src="Images/IMG_8592.jpeg" alt ="tunnel on 2 lane road in the forest">
+            <img src="Images/IMG_8589.jpeg" alt ="Radio tower atop mountain at sunset">
         </div>
     </body>
 </html>
