--- a/thirdpage.html
+++ b/thirdpage.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Messing About Newsletter</title>
+        <title>@trollymippin</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
         <div class="topnav">
             <a href="firstpage.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
-            <a href="fourthpage.html">Page Four</a>
+            <a href="fourthpage.html">greenshroomstudios</a>
         </div>
         <!-- Welcome Text -->
         <div class="welcome">
