--- a/secondpage.html
+++ b/secondpage.html
@@ -39,8 +39,8 @@
         <!-- Navigation Bar -->
         <div class="topnav">
             <a href="firstpage.html">Homepage</a>
-            <a href="thirdpage.html">Page Three</a>
-            <a href="fourthpage.html">greenshroomstudios</a>
+            <a href="trollymippin.html">trollymippin</a>
+            <a href="greenshroom.html">greenshroomstudios</a>
         </div>
 
         <div class="welcome">
