--- a/firstpage.html
+++ b/firstpage.html
@@ -40,8 +40,8 @@
         <!-- Navigation Bar -->
        <div class="topnav">
             <a href="secondpage.html">Page Two</a>
-            <a href="thirdpage.html">Page Three</a>
-            <a href="fourthpage.html">greenshroomstudios</a>
+            <a href="trollymippin.html">trollymippin</a>
+            <a href="greenshroom.html">greenshroomstudios</a>
         </div>
 
         <div class="welcome">
