--- a/greenshroom.html
+++ b/greenshroom.html
@@ -39,7 +39,7 @@
        <div class="topnav">
             <a href="firstpage.html">Homepage</a>
             <a href="secondpage.html">Page Two</a>
-            <a href="thirdpage.html">trollymippin</a>
+            <a href="trollymippin.html">trollymippin</a>
         </div>
 
         <div class="welcome">
@@ -49,6 +49,7 @@
                
             </p>
         </div>
+        <!-- Images -->
         <div class="images">
             <!-- <img src="Images/image" alt ="alternatve text"> -->
              <img src="Images/greenshroomstudios_airplane.png" alt="airplane wing against a dark blue sky at sunset">
