--- a/trollymippin.html
+++ b/trollymippin.html
@@ -44,12 +44,19 @@
         </div>
         <!-- Welcome Text -->
         <div class="welcome">
-            <h1>Welcome To Page 3!</h1>
-            <p>This is the newsletter page.<br>
-               You can check back here to see what's being worked on for the site!<br>
-               Pictures are live, new ones will be coming soon!<br>
-               We're in the process of different theme testing, any suggestions<br>
-               would be greatly appreciated</p>
+            <h1>@trollymippin</h1>
+            <a href="https://www.instagram.com/trollymippin/">@trollymippin</a>
+            <p>Here are some pictures from the instagram<br>
         </div>
+
+        <!-- Images -->
+        <div class="images">
+            <!-- <img src="Images/image" alt ="alternatve text"> -->
+            <img src="Images/trollymippin_aurora.png" alt="Red umbrella against a purple night sky">
+            <img src="Images/trollymippin_beachhouse.png" alt="Beach house">
+            <img src="Images/trollymippin_bridgeatnight.png" alt="Bridge at night"
+
+        </div>
+
     </body>
 </html>
