--- a/trollymippin.html
+++ b/trollymippin.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
         <link id="theme-style" rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="Images/trollymippin_favicon.png">
 
         <script>
             window.addEventListener("DOMContentLoaded", () => {
@@ -45,7 +46,7 @@
         <!-- Welcome Text -->
         <div class="welcome">
             <h1>@trollymippin</h1>
-            <a href="https://www.instagram.com/trollymippin/">@trollymippin</a>
+            <a href="https://www.instagram.com/trollymippin/" target="_blank">@trollymippin</a>
             <p>Here are some pictures from the instagram<br>
         </div>
 
