--- a/greenshroom.html
+++ b/greenshroom.html
@@ -6,7 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&display=swap" rel="stylesheet">
         <link id="theme-style" rel="stylesheet" type="text/css" href="styles.css">
-        
+        <link rel="icon" type="image/x-icon" href="Images/greenshroom_favicon.png">
+
         <script>
             window.addEventListener("DOMContentLoaded", () => {
                 const params = new URLSearchParams(window.location.search);
@@ -44,7 +45,7 @@
 
         <div class="welcome">
             <h1>@greenshroomstudios</h1>
-            <a href="https://www.instagram.com/greenshroomstudios/">@greenshroomstudios</a>
+            <a href="https://www.instagram.com/greenshroomstudios/" target="_blank">@greenshroomstudios</a>
             <p>Here are some pictures from the instagram<br>
                
             </p>
